tests/files/type_checker_tests/should_fail/221.cmdr
//Should not be able to use alias variable inappropriately
alias ll = ls -al;
println ll;